# RealtimeEdgeDetector

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/realtimeedgedetector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/realtimeedgedetector/: MainActivity.java  NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/realtimeedgedetector/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.js  main.ts
